sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: not found: value i
    if (position ==0) {i+=1}
                       ^